--- a/ex14-funcao-mes.html
+++ b/ex14-funcao-mes.html
@@ -1,45 +1,80 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882">
-
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de documento HTML</title>
-    <script>
-        // 'use strict' impede que variáveis sejam declaradas
-        // sem o uso de let, var ou const
-        // Inicializar variáveis diretamente é má prática de
-        // programação
-        'use strict'
-
-        /*
-
-            No documento HTML, coloque um elemento <select> (veja ex10) tendo
-            como opções os números de 1 a 12, e uma <div> de resultado.
-
-            Em JS, escreva uma função que receba um número entre 1 e 12 e retorne
-            o nome do mês correspondente (janeiro, fevereiro, etc.)
-
-            Escreva outra função que leia qual o valor selecionado no <select> e 
-            efetue uma chamada à função anterior, passando esse valor como parâmetro
-            e capturando o resultado. Escreva o resultado na <div>.
-
-            Finalmente, associe a segunda função ao evento 'change' do <select>.
-
-        */
-        
-    </script>
-
-<!--[if gte mso 9]><xml>
-<mso:CustomDocumentProperties>
-<mso:display_urn_x003a_schemas-microsoft-com_x003a_office_x003a_office_x0023_SharedWithUsers msdt:dt="string">Estruturas de Dados-A-M-ANALISE E DESENV. DE SISTEMAS-109-20202 Members</mso:display_urn_x003a_schemas-microsoft-com_x003a_office_x003a_office_x0023_SharedWithUsers>
-<mso:SharedWithUsers msdt:dt="string">85;#Estruturas de Dados-A-M-ANALISE E DESENV. DE SISTEMAS-109-20202 Members</mso:SharedWithUsers>
-</mso:CustomDocumentProperties>
-</xml><![endif]-->
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <title>Página modelo</title>
 </head>
-
 <body>
+   <h1>Mês</h1>
+   <p>Escolha o mês:</p>
+
+   <select id="mes">
+      <option>(Selecione)</option>
+   </select>
+   
+   <div id="resultado"></div>
+   
+   <script>
+      'use strict'; // Modo "chato" do Javascript
+
+      /*
+         No documento HTML, coloque um elemento <select> (veja ex07) tendo
+         como opções os números de 1 a 12, e uma <div> de resultado.
+         Em JS, escreva uma função que receba um número entre 1 e 12 e retorne
+         o nome do mês correspondente (janeiro, fevereiro, etc.)
+         Escreva outra função que leia qual o valor selecionado no <select> e 
+         efetue uma chamada à função anterior, passando esse valor como parâmetro
+         e capturando o resultado. Escreva o resultado na <div>.
+         Finalmente, associe a segunda função ao evento 'change' do <select>.
+      */
+
+      // Captura dos elementos
+      let elemMes = document.querySelector('#mes');
+      let elemResultado = document.querySelector('#resultado');
+
+      // Criação das <option> do <select>
+      let opt;
+
+      for(let i = 1; i <= 12; i++) {
+         opt = document.createElement('option');
+         opt.innerText = i;
+         elemMes.appendChild(opt);
+      }
+
+      // Função que recebe 1 argumento e tem valor de retorno
+      function nomeMes(numMes) {
+         // Usando vetores que contêm o nome dos meses
+         const nomesMeses = [
+            'Janeiro', 'Fevereiro', 'Março', 
+            'Abril', 'Maio', 'Junho',
+            'Julho', 'Agosto', 'Setembro',
+            'Outubro', 'Novembro', 'Dezembro'
+         ];
+         // Descontando 1 porque vetores começam no índice 0
+         return nomesMeses[numMes - 1];
+      }
+
+      // Função que não recebe argumentos nem tem valor de retorno
+      function selectMudou() {
+         
+         elemResultado.innerText = '';
+
+         let valorSel = elemMes.selectedIndex; // Índice da opção selecionada
+
+         if(valorSel == 0) { // (Selecione)
+            alert('Opção inválida!');
+         }
+         else {
+            let textoMes = nomeMes(valorSel); // Chamada à função anterior
+            elemResultado.innerText = textoMes;
+         }
+      }
+
+      elemMes.addEventListener('change', selectMudou);
+   
+   </script> 
 
 </body>
-
 </html>
