--- a/ex16-argumento-resto.html
+++ b/ex16-argumento-resto.html
@@ -25,6 +25,38 @@
 
             Retorne o resultado.
         */
+
+       // Chamadas à função (funcionam perfeitamente ANTES 
+      // de uma DECLARAÇÃO de função)
+      document.write(calcular(true, 1, 2, 3, 5, 6, 7, 8, 9));
+      document.write('<br>');
+      document.write(calcular(false, 20, 33, 87, -12, 43));
+
+      // ...nums é argumento de resto
+      function calcular(multiplicar, ...nums) {
+         let resultado;
+
+         if(multiplicar) { // O argumento "multiplicar" é true
+            resultado = 1;
+            // O argumento de resto SEMPRE se comporta
+            // como um vetor
+            for(let n of nums) {
+               resultado *= n;
+            }
+         }
+         else {
+            resultado = 0;
+            for(let n of nums) {
+               resultado += n;
+            }
+         }
+
+         return resultado;
+
+      }
+
+   </script>
+</head>
         
     </script>
 
